[package]
name = "rustysunset"
version = "0.1.0"
edition = "2021"
authors = ["rustysunset developers"]
description = "Smooth color temperature transitions for hyprsunset"
license = "MIT"
repository = "https://github.com/sxndmxn/rustysunset"

[[bin]]
name = "rustysunset"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
chrono = "0.4"
sunrise = "1.0"
dirs = "5.0"
env_logger = "0.11"
log = "0.4"
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.8"
